# airbag

./: .gitignore  Cargo.toml
arduino-nano/: Cargo.toml
datasets/: .gitignore
datasets/opendataset/: .gitignore  Demo videos of KFall.xlsx
py_src/: anomaly_detection.py  cnn_model.py  deployment_test.py  file_io.py  graphics.py  loading_strategies.py  model_evaluation.py  normalization_strategies.py  parallelize.py  playground.py  preprocess.py  util.py  visualize_evaluation.py
results/: results.json
src/: main.rs
